remove post meta from single post templates

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*   
-Theme Name: Project AR2
+Theme Name: Project AR2 InfinityMedia
 Theme URI: http://www.arrastheme.com/
 Description: Arras 2.0. Built on HTML5/CSS3. Customize your home layout with a featured slideshow and 3 post sections with 4 different layouts. Support available at http://www.arrastheme.com/.
 Author: Melvin Lee
