make header image as link

--- a/style.css
+++ b/style.css
@@ -1898,3 +1898,20 @@ article.page .entry-header h1.entry-title {
 	}
 
 }
+
+/* make header as link */
+
+#branding {
+	position: relative;
+}
+
+#header-link-overlay {
+	position:absolute; 
+	width:100%;
+	height:100%;
+	top:0;
+	left: 0;
+	z-index: 1;
+}
+
+/* END make header as link */
